# CircuitClash-ROS2-Problem

./: CMakeLists.txt  README.md  package.xml
action/: NavigateWaypoint.action
scripts/: README.md  client_waypoint.py  coordinates.txt  server_waypoint.py
